--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     src="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAF-lJJ8w4w&#x2F;FEnvws6kLzrGn-qhbEQbmA&#x2F;view?embed" allowfullscreen="allowfullscreen" allow="fullscreen">
   </iframe>
 </div>
-<a style="margin-left: 42%; color: rgb(0, 67, 253);" href="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAF-lJJ8w4w&#x2F;FEnvws6kLzrGn-qhbEQbmA&#x2F;view?utm_content=DAF-lJJ8w4w&amp;utm_campaign=designshare&amp;utm_medium=embeds&amp;utm_source=link" target="_blank" rel="noopener">ryoku - project</a> <span style="color: rgb(0, 64, 255);">de Gabriel mendes</span>
+<a style="margin-left: 42%; color: rgb(0, 67, 253);" href="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAF-lJJ8w4w&#x2F;FEnvws6kLzrGn-qhbEQbmA&#x2F;view?utm_content=DAF-lJJ8w4w&amp;utm_campaign=designshare&amp;utm_medium=embeds&amp;utm_source=link" target="_blank" rel="noopener">ryoku - project</a> <span style="color: rgb(0, 64, 255);">de Henrike P.B e Gabriel mendes</span>
 
     </div>
 
